Add line in vertical menu

--- a/Ejercicio3/styles.css
+++ b/Ejercicio3/styles.css
@@ -30,6 +30,7 @@ body {
       @media screen and (max-width: 650px) {
         .menu-item {
           text-align: center;
+          border-bottom: 1px solid teal;
         }
       }
       .menu-item:hover {
